--- a/campaign/package.json
+++ b/campaign/package.json
@@ -21,11 +21,11 @@
     "electron": "^15.1.2",
     "events": "^3.3.0",
     "hardhat": "^2.6.4",
-    "web3": "^1.6.0"
+    "web3": "^1.6.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.1"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7"
