--- a/campaign/package.json
+++ b/campaign/package.json
@@ -22,12 +22,12 @@
     "events": "^3.3.0",
     "hardhat": "^2.6.4",
     "web3": "^1.6.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.1"
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.7",
+    "@nomiclabs/hardhat-ethers": "^2.0.2"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "chai": "^4.3.4",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.4.7"
+    "chai": "^4.3.4"
   }
 }
